<resources>
    <string name="app_name">DiabetesMS</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="glucose_reading">Glucose reading</string>
    <string name="time">Time</string>
    <string name="time_period">Time Period</string>
    <string name="action">Action</string>
    <string name="medication">Mediation</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="pass">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="summary">Summary</string>
    <string name="measure">Measure</string>
    <string name="average">Average</string>
    <string name="highs">Highs</string>
    <string name="lows">Lows</string>
    <string name="normal">Normal</string>
    <string name="signinfail">Sign in failed!</string>
    <string name="userprofile">User Profile</string>
    <string name="fillindetails">Let\'s get to know more about you</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_welcome2">Welcome2Activity</string>

</resources>
